[tool.poetry]
name = "docker"
version = "0.1.0"
description = ""
authors = ["Jenet <jenet@timepercentcorp.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.20.0"
fastapi = "^0.89.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
